empezamos con la vista de nosotros: PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,17 +1,18 @@
 
-<div class="nosotros animate__animated animate__fadeIn content">
-
-  <!-- <h1 class=" title-margin-bottom animate__animated animate__fadeIn"> NOSOTROS </h1> -->
-
-  <div >
-
-    <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000" > ¿Por qué Elegirnos? </h2>
-    <!-- <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line"> -->
+<div class=" content nosotros animate__animated animate__fadeIn">
+  <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
 
-    <div class="nosotros__card">
+
+
+  <div class="nosotros__content-1">
+
+      <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000" > ¿Por qué Elegirnos? </h2>
+
+      <div class="nosotros__content-1__cards">
+
       <div>
-        <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               real_estate_agent
@@ -25,7 +26,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Especialistas la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Especialistas la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               engineering
@@ -39,7 +40,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               workspace_premium
@@ -53,7 +54,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               heat_pump_balance
@@ -67,7 +68,7 @@
       </div>
 
       <div>
-        <p-card class="p_card" header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]= "{width: '260px', height: '495px', overflow: 'hidden'}">
+        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
@@ -83,33 +84,54 @@
 
     </div>
 
-    <h2 data-aos="zoom-out" data-aos-duration="1000"> ¿Quiénes somos?? </h2>
-    <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
-    <div class="nosotros__info container">
-      <p>En <strong> Basamento SRL </strong>, nos dedicamos a brindar soluciones integrales en el ámbito de la <strong>
-          ingeniería </strong>
-        y la <strong> construcción </strong>, tanto para obras privadas como industriales. Nuestro compromiso es ofrecer
-        <strong> servicios de
-          vanguardia </strong> que permitan a nuestros clientes tomar decisiones fundamentadas en la ejecución de sus
-        proyectos de
-        infraestructura, asegurando su seguridad y minimizando el impacto ambiental.
-        Con un equipo de <strong> profesionales altamente capacitados </strong> y una larga trayectoria en el sector,
-        nos destacamos por
-        nuestra capacidad de adaptación a las distintas problemáticas del mercado, gracias a un enfoque innovador y
-        orientado a la excelencia. <br> <br>
-        <strong class="strong">
-          Nuestra experiencia nos respalda como líderes en el mercado, ofreciendo soluciones a lo largo de toda la vida
-          útil
-          de las infraestructuras, abarcando todos tipos sectores. Nos comprometemos a acompañar a nuestros clientes en
-          la
-          eficiente gestión de sus activos de infraestructura, con un enfoque en la sustentabilidad y la calidad.
-        </strong>
-      </p>
-      <!-- <img  data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" src="../../../../assets/imagenes/nosotros/oficina.jpg" width="400" alt=""> -->
-      <video poster="assets/imagenes/nosotros/play.jpg" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer (ended)="restartVideo(videoPlayer)" controls>
+    </div>
+
+
+    <div class="nosotros__content-2 container">
+
+      <h2 class="sub-title"> Sobre Nosotros </h2>
+
+      <section class="nosotros__content-2__section">
+
+      <section class="nosotros__content-2__section__1">
+
+      <div class="nosotros__content-2__section__1__text-1">
+        <p>
+          Nos dedicamos a <strong> brindar soluciones integrales </strong> en el ámbito de la ingeniería y construcción para obras privadas
+          e industriales. Nuestro compromiso es <strong> ofrecer servicios de vanguardia </strong> que permitan a nustros clientes tomar
+          decisiones fundamentales <strong> afianzando su seguridad y minimizando el impacto ambiental. </strong>
+        </p>
+      </div>
+
+      <div class="nosotros__content-2__section__1__text-2">
+        <p>
+          Con amplia <strong> trayectoria en el mercado </strong>, nos destacamos por nuestra capacidad de <strong> adaptación </strong> en
+          las distintas problemáticas y la búsqueda constante de <strong> excelencia. </strong>
+        </p>
+      </div>
+
+      <div class="nosotros__content-2__section__1__text-3">
+        <p>
+          Como lideres del mercado, nos comprometemos a acompañar a nustros clientes en la gestión de sus activos con un enfoque de calidad
+          y sustentable.
+        </p>
+      </div>
+
+    </section>
+
+    <section class="nosotros__content-2__section__2">
+
+      <video data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer (ended)="restartVideo(videoPlayer)" controls>
         <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
+
+    </section>
+
+
+    </section>
+
+
     </div>
 
     <div class="nosotros__content container">
@@ -174,6 +196,6 @@
 
     <p-scrollTop />
 
-  </div>
+
 
 </div>
