--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -46,16 +46,16 @@
     &__section {
       display: flex;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: space-between;
       margin-bottom: 8rem;
 
       &__1 {
 
         display: flex;
         flex-direction: column;
-        width: 60%;
+        width: 55%;
         line-height: 2rem;
-        text-align: left;
+        text-align: justify;
 
         &__text-1, &__text-2 {
           margin-bottom: 3rem;
@@ -71,13 +71,12 @@
         }
       }
       &__2 {
-        padding-right: 2rem;
         text-align: right;
         flex: 1;
 
         video {
-          max-height: 40rem;
-          width: 47%;
+          height: 30rem;
+          width: 20rem;
           object-fit: cover;
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
           object-fit: scale-down;
