--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,18 +1,15 @@
-
-<div class=" content nosotros animate__animated animate__fadeIn">
+<div class="content nosotros animate__animated animate__fadeIn">
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
-
-
-
 
   <div class="nosotros__content-1">
 
-      <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000" > ¿Por qué Elegirnos? </h2>
+    <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué Elegirnos? </h2>
 
-      <div class="nosotros__content-1__cards">
+    <div class="nosotros__content-1__cards">
 
       <div>
-        <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
+        <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia"
+          [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               real_estate_agent
@@ -26,11 +23,12 @@
       </div>
 
       <div>
-        <p-card header="Especialistas la Materia" subheader="Maestría en Ingeniería" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
+        <p-card header="Especialistas la Materia" subheader="Maestría en Ingeniería"
+          [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               engineering
-              </span>
+            </span>
           </ng-template>
           <p>
             Contamos con un grupo de profesionales altamente calificados en ingeniería y geofísica, con una amplia
@@ -40,11 +38,12 @@
       </div>
 
       <div>
-        <p-card header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
+        <p-card header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción"
+          [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               workspace_premium
-              </span>
+            </span>
           </ng-template>
           <p>
             Con más de diez años de experiencia en geofísica aplicada, hemos enfrentado proyectos desafiantes y hemos
@@ -54,11 +53,12 @@
       </div>
 
       <div>
-        <p-card header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
+        <p-card header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente"
+          [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               heat_pump_balance
-              </span>
+            </span>
           </ng-template>
           <p>
             Nos dedicamos a proporcionar soluciones geofísicas que reduzcan al mínimo el impacto en el medio ambiente y
@@ -68,11 +68,12 @@
       </div>
 
       <div>
-        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica" [style]= "{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
+        <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica"
+          [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
               captive_portal
-              </span>
+            </span>
           </ng-template>
           <p>
             Permanecemos actualizados con las últimas herramientas y tecnologías de vanguardia en la captura,
@@ -84,118 +85,121 @@
 
     </div>
 
-    </div>
+  </div>
 
 
-    <div class="nosotros__content-2 container">
+  <div class="nosotros__content-2 container">
 
-      <h2 class="sub-title"> Sobre Nosotros </h2>
+    <h2 class="sub-title"> Sobre Nosotros </h2>
 
-      <section class="nosotros__content-2__section">
+    <section class="nosotros__content-2__section">
 
       <section class="nosotros__content-2__section__1">
 
-      <div class="nosotros__content-2__section__1__text-1">
-        <p>
-          Nos dedicamos a <strong> brindar soluciones integrales </strong> en el ámbito de la ingeniería y construcción para obras privadas
-          e industriales. Nuestro compromiso es <strong> ofrecer servicios de vanguardia </strong> que permitan a nustros clientes tomar
-          decisiones fundamentales <strong> afianzando su seguridad y minimizando el impacto ambiental. </strong>
-        </p>
-      </div>
+        <div class="nosotros__content-2__section__1__text-1">
+          <p>
+            Nos dedicamos a <strong> brindar soluciones integrales </strong> en el ámbito de la ingeniería y
+            construcción para obras privadas
+            e industriales. Nuestro compromiso es <strong> ofrecer servicios de vanguardia </strong> que permitan a
+            nustros clientes tomar
+            decisiones fundamentales <strong> afianzando su seguridad y minimizando el impacto ambiental. </strong>
+          </p>
+        </div>
 
-      <div class="nosotros__content-2__section__1__text-2">
-        <p>
-          Con amplia <strong> trayectoria en el mercado </strong>, nos destacamos por nuestra capacidad de <strong> adaptación </strong> en
-          las distintas problemáticas y la búsqueda constante de <strong> excelencia. </strong>
-        </p>
-      </div>
+        <div class="nosotros__content-2__section__1__text-2">
+          <p>
+            Con amplia <strong> trayectoria en el mercado </strong>, nos destacamos por nuestra capacidad de <strong>
+              adaptación </strong> en
+            las distintas problemáticas y la búsqueda constante de <strong> excelencia. </strong>
+          </p>
+        </div>
 
-      <div class="nosotros__content-2__section__1__text-3">
-        <p>
-          Como lideres del mercado, nos comprometemos a acompañar a nustros clientes en la gestión de sus activos con un enfoque de calidad
-          y sustentable.
-        </p>
-      </div>
+        <div class="nosotros__content-2__section__1__text-3">
+          <p>
+            Como lideres del mercado, nos comprometemos a acompañar a nustros clientes en la gestión de sus activos con
+            un enfoque de calidad
+            y sustentable.
+          </p>
+        </div>
+
+      </section>
+
+      <section class="nosotros__content-2__section__2">
+
+        <video data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer
+          (ended)="restartVideo(videoPlayer)" controls>
+          <source src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
+          Tu navegador no soporta el elemento de video.
+        </video>
+
+      </section>
+
 
     </section>
 
-    <section class="nosotros__content-2__section__2">
 
-      <video data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" #videoPlayer (ended)="restartVideo(videoPlayer)" controls>
-        <source  src="assets/videos/home/video_presentacion.mp4" type="video/mp4">
-        Tu navegador no soporta el elemento de video.
-      </video>
+  </div>
 
-    </section>
+  <div class="nosotros__content-3">
 
+    <div class="nosotros__content-3__title-background">
+      <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
+      <h2 class="sub-title">Preguntas Frecuentes</h2>
+    </div>
 
-    </section>
+    <div class="nosotros__content-3__accordion container">
 
+      <p-accordion [activeIndex]="0">
+        <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
+          <p>
+            Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
+            calidad y soluciones innovadoras para proyectos de ingeniería civil.
+          </p>
+        </p-accordionTab>
+        <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
+          <p>
+            Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño
+            arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
+          </p>
+        </p-accordionTab>
+        <p-accordionTab
+          header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
+          <p>
+            Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos
+            por
+            utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
+          </p>
+        </p-accordionTab>
+        <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
+          <p>
+            Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de
+            viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales.
+            Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas,
+            así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En
+            Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los
+            proyectos que emprendemos.
+          </p>
+        </p-accordionTab>
+        <p-accordionTab
+          header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
+          <p>
+            Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por
+            correo
+            electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que
+            necesites sobre nuestros servicios.
+          </p>
+        </p-accordionTab>
+      </p-accordion>
 
     </div>
 
-    <div class="nosotros__content container">
-      <!-- <app-preguntas-frecuentes /> -->
-      <h2 data-aos="zoom-out" data-aos-duration="1000">Preguntas Frecuentes</h2>
-      <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
+  </div>
 
-      <div>
+  <div class="nosotros nosotros__contact">
+    <p class="title_primary">Explora de qué manera podemos colaborar en la ejecución <br> y mejora de tus proyectos de infraestructura</p>
+    <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
+  </div>
 
-        <p-accordion [activeIndex]="0">
-          <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
-            <p>
-              Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
-              calidad y soluciones innovadoras para proyectos de ingeniería civil.
-            </p>
-          </p-accordionTab>
-          <p-accordionTab header="¿Qué servicios ofrece Basamento SRL?">
-            <p>
-              Basamento SRL ofrece una amplia gama de servicios en el sector de la construcción, que incluyen diseño
-              arquitectónico, construcción de obras civiles, mantenimiento de infraestructuras, entre otros.
-            </p>
-          </p-accordionTab>
-          <p-accordionTab
-            header="¿Cuál es el enfoque de Basamento SRL en términos de sostenibilidad y responsabilidad ambiental?">
-            <p>
-              Basamento SRL está comprometida con la sostenibilidad y la protección del medio ambiente. Nos esforzamos
-              por
-              utilizar materiales sostenibles, reducir residuos y minimizar el impacto ambiental de nuestros proyectos.
-            </p>
-          </p-accordionTab>
-          <p-accordionTab header="¿Qué proyectos ha realizado Basamento SRL en el pasado?">
-            <p>
-              Basamento SRL ha completado con éxito una variedad de proyectos que abarcan desde la construcción de
-              viviendas residenciales hasta la implementación de mejoras en infraestructuras comerciales e industriales.
-              Nuestro trabajo también se ha extendido a proyectos de renovación y mejoras en instalaciones de empresas,
-              así como a la creación de estaciones de servicio y proyectos de desarrollo vial y de transporte. En
-              Basamento SRL, nos enorgullecemos de nuestra versatilidad y compromiso con la excelencia en todos los
-              proyectos que emprendemos.
-            </p>
-          </p-accordionTab>
-          <p-accordionTab
-            header="¿Cómo puedo contactar con Basamento SRL para solicitar un presupuesto o más información?">
-            <p>
-              Puedes ponerte en contacto con Basamento SRL a través de nuestro formulario de contacto en línea, por
-              correo
-              electrónico o por teléfono. Estaremos encantados de atenderte y proporcionarte toda la información que
-              necesites sobre nuestros servicios.
-            </p>
-          </p-accordionTab>
-        </p-accordion>
-
-      </div>
-    </div>
-
-    <div class="nosotros nosotros__contact">
-      <h2 data-aos="zoom-out" data-aos-duration="1000"> Contáctanos Ahora </h2>
-      <hr data-aos="zoom-out" data-aos-duration="1200" class="colored-line">
-      <p>Explora de qué manera podemos colaborar en la mejora de tus proyectos de infraestructura y en la reducción de
-        los riesgos asociados</p>
-      <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
-    </div>
-
-    <p-scrollTop />
-
-
+  <p-scrollTop />
 
 </div>
