Agregamos el vector en todas las vistas: PC

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="contacto animate__animated animate__fadeIn content">
-
+  <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
   <h1 class="title-margin-bottom">CONTACTO</h1>
 
   <div class="contacto__content container">
@@ -12,7 +12,7 @@
         presupuesto o simplemente desees conocernos mejor, estamos aquí para escucharte y responder a todas tus
         consultas.
       </p>
-      <img class="swing-in-top-fwd" src="assets/imagenes/contacto/img-contacto.jpg" alt="">
+      <img src="assets/imagenes/contacto/img-contacto.jpg" alt="">
     </div>
 
     <div class="contacto__content__form">
