--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -1,7 +1,8 @@
 
-<div class="proyectos content" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
+<div class="proyectos animate__animated animate__fadeIn content" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
+  <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
-  <h1 class="title-margin-bottom animate__animated animate__fadeIn">PROYECTOS</h1>
+  <h1 class="title-margin-bottom">PROYECTOS</h1>
 
   <div class="botones">
     <button routerLink="/proyectos/actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
