--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,6 +110,13 @@ h1 {
   }
 }
 
+.vector {
+  display: flex;
+  margin-left: auto;
+  width: 11rem;
+  height: auto;
+}
+
 .colored-line {
   width: 12rem;
   height: 0.2rem;
@@ -137,23 +144,6 @@ h1 {
 
 // ANIMACIONES GENERALES DE MI APLICACIÓN
 
-
-.swing-in-top-fwd {
-	animation: swing-in-top-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
-}
-
- @keyframes swing-in-top-fwd {
-  0% {
-    transform: rotateX(-100deg);
-    transform-origin: top;
-    opacity: 0;
-  }
-  100% {
-    transform: rotateX(0deg);
-    transform-origin: top;
-    opacity: 1;
-  }
-}
 
 .focus-in-contract-bck {
 	animation: focus-in-contract-bck 4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
