Empezamos la vista de proyectos: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -2,7 +2,7 @@
 <div class="proyectos animate__animated animate__fadeIn content" [ngClass]="proyectosClass" *ngIf="proyectos && proyectos.length > 0" >
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
-  <h1 class="title-margin-bottom">PROYECTOS</h1>
+  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Nuestros Proyectos </h2>
 
   <div class="botones">
     <button routerLink="/proyectos/actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
