--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,7 +1,8 @@
 
 <div class="servicios content">
+  <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
-  <h1 class="title-margin-bottom animate__animated animate__fadeIn">SERVICIOS</h1>
+  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Servicios y Actividades </h2>
 
   <div class="servicios__content servicios__content--destacado">
 
