--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -11,7 +11,7 @@
 
       <div class="footer__section footer__section--contact">
         <h2>SECCIONES</h2>
-        <p> <a class="footer__link" routerLink="/nosotros">Sobre nosotros</a></p>
+        <p> <a class="footer__link" routerLink="/nosotros">Sobre Nosotros</a></p>
         <p> <a class="footer__link" routerLink="/proyectos">Nuestros proyectos</a></p>
         <p> <a class="footer__link" routerLink="/servicios">Servicios y actividades</a></p>
         <p> <a class="footer__link" routerLink="/contacto">Contáctanos</a></p>
