Comenzamos con los botones de la vista de Proyectos: PC

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -5,9 +5,9 @@
   <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Nuestros Proyectos </h2>
 
   <div class="botones">
-    <button routerLink="/proyectos/actuales" style="font-size: 1rem; margin-right: 1rem;"> ACTUALES </button>
-    <button routerLink="/proyectos/previos" style="font-size: 1rem; margin-right: 1rem;"> PREVIOS </button>
-    <button routerLink="/proyectos/legado" style="font-size: 1rem; margin-right: 1rem;"> LEGADO </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/actuales"> Actuales </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/previos"> Previos </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/legado"> Legado </button>
   </div>
 
   <!-- Contenido específico para cada servicio -->
