--- a/src/app/client/pages/proyectos/proyectos.component.scss
+++ b/src/app/client/pages/proyectos/proyectos.component.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     .botones {
-      margin-bottom: 3rem;
+      display: none;
     }
     // background-color: red;
   }
