--- a/src/app/client/shared/header/header.component.html
+++ b/src/app/client/shared/header/header.component.html
@@ -13,14 +13,14 @@
     <div class="header__btn-container">
 
       <button [hidden]="!showButton" (click)="scrollToVideo()" class="btn-53 animate__animated animate__bounceInDown">
-        <div class="original">Comenzemos</div>
+        <div class="original">Comencemos</div>
         <div class="letters">
           <span>C</span>
           <span>O</span>
           <span>M</span>
           <span>E</span>
           <span>N</span>
-          <span>Z</span>
+          <span>C</span>
           <span>E</span>
           <span>M</span>
           <span>O</span>
