--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,7 +138,7 @@ h1 {
   --clr-font-main: hsla(0 0% 20% / 100);
   --btn-bg-1: #0076B4;
   --btn-bg-2: #3FD4F5;
-  --btn-bg-color: hsla(360 100% 100% / 1);
+  --btn-bg-color: #ffff;
   --radii: 0.5em;
   cursor: pointer;
   letter-spacing: 0.2rem;
