--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -1592,8 +1592,8 @@
     height: 20px;
   }
   .p-radiobutton .p-radiobutton-box {
-    border: 1px solid #3f4b5b;
-    background: #20262e;
+    border: 3px solid #1CBEDB;
+    background: white;
     width: 20px;
     height: 20px;
     color: rgba(255, 255, 255, 0.87);
@@ -1601,13 +1601,13 @@
     transition: background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
   }
   .p-radiobutton .p-radiobutton-box:not(.p-disabled):not(.p-highlight):hover {
-    border-color: #3f4b5b;
+    border-color: #3FD4F5;
   }
+
   .p-radiobutton .p-radiobutton-box:not(.p-disabled).p-focus {
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 1px #f0e6f5;
-    border-color: #c298d8;
   }
   .p-radiobutton .p-radiobutton-box .p-radiobutton-icon {
     width: 12px;
