Agregamos el texto debajo de Formulario de Contacto: PC-OFICINA

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -4,6 +4,9 @@
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
   <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Formulario de Contacto </h2>
 
+  <p>
+    <strong>¡Gracias por tu interés!</strong> Estamos entusiasmados por conocer <br> como podemos <strong>colaborar con tu próximo proyecto.</strong>
+  </p>
     <div class="contacto__content__1 ">
 
       <div class="contacto__content__1__radio__options">
