--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -1,10 +1,14 @@
-$color-background: #F3FEFE;
+
 
 .contacto {
   display: flex;
   flex-direction: column;
+  text-align: center;
   flex-wrap: wrap;
-  background-color: $color-background;
+  p {
+    padding-bottom: 3rem;
+    letter-spacing: 0.08rem;
+  }
 
   &__content__1 {
 
