--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -80,6 +80,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     margin-top: 15rem;
 
     section {
