--- a/src/app/client/components/card-animated/card-animated.component.html
+++ b/src/app/client/components/card-animated/card-animated.component.html
@@ -8,7 +8,7 @@
 
       <div class="infotop" [style.fontSize]="fontSize">
 
-        <span class="material-symbols-outlined" style="font-size: 4rem; margin-bottom: 2rem;" >
+        <span class="material-symbols-outlined" style="font-size: 4rem; margin-bottom: 2rem; color: var(--color-primary);" >
        {{svgName}}
         </span> <br>
           {{title}}
