--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -79,6 +79,7 @@
     </div>
 
   <div class="contacto contacto__contact">
+
     <section>
       <app-card-animated  svgName="phone_in_talk" title="¡Hablá con nosotros!" subtitle_1="+54 9 (3462) 553824" subtitle_2="537066"/>
     </section>
@@ -91,9 +92,13 @@
       <app-card-animated  svgName="timer" title="Nuestras oficinas" subtitle_1="Lunes a Viernes" subtitle_2="8:00 a 17:00"/>
     </section>
 
+    <div class="background"></div>
+
+
   </div>
 
-  <div data-aos="fade-down" class="contacto contacto__map container last-content">
+  <div  class="contacto__map container last-content">
+    <h2 class="sub-title"> ¿Como llegar?</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7889.605351467845!2d-61.96701362981567!3d-33.75626155555726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c87b487979cc21%3A0x6ccc11578cb91bd7!2sTucum%C3%A1n%20555%2C%20Venado%20Tuerto%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1710996967871!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 
