--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -70,6 +70,7 @@
       textarea::placeholder {
         color: white;
       }
+      margin-bottom: 5rem;
     }
 
 
@@ -81,37 +82,35 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 15rem;
-
-    section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    span {
-      color: #80722be4;
-      font-size: 6rem;
-      margin-bottom: 1rem;
-    }
-
-    h3 {
-      margin-top: 0.9375rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 0.8125rem;
-    }
+    margin-bottom: 5rem;
+    position: relative;
+    .background {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+      width: 100%;
+      height: 10rem;
+      background-color: var(--color-primary-light);
+      z-index: -1;
+  }
   }
 
-  &__map iframe {
-    display: flex;
-    width: 100vh;
-    height: 50vh;
-    margin-top: 15rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s;
+
+
+
+  &__map  {
+    h2 {
+      margin: 0 auto;
+    }
+    iframe {
+      display: flex;
+      width: 100vh;
+      height: 50vh;
+      margin-top: 5rem;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.3s;
+    }
   }
 
 }
