--- a/src/app/client/components/card-animated/card-animated.component.scss
+++ b/src/app/client/components/card-animated/card-animated.component.scss
@@ -1,6 +1,6 @@
 .e-card {
   margin: 100px auto;
-  background: transparent;
+  background: var(--color-primary);
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
   border-radius: 1rem;
